# ICP-Solver

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
config/: config.yaml
include/: ceres_icp.h  g2o_icp.h  gtsam_icp.h  lidarCeres.h  lidarG2O.h  lidarGtsam.h
src/: backup.cpp  ceres_icp.cpp  g2o_icp.cpp  gtsam_icp.cpp  lidarCeres.cpp  main.cpp
